# voxel-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
docs/: dev_links.md
ratlib/include/ratlib/core/: types.hpp
ratlib/include/ratlib/log/: logger.hpp
source/: main.cpp
